# virtual-machine

./: .gitignore  CMakeLists.txt  oops.cpp
bytecode/: CMakeLists.txt  instruction.cpp  instruction.h
classes/: CMakeLists.txt  class.cpp  class.h  class_header.h  datatypes.cpp  datatypes.h  field_descriptor.h  field_import.h  object.cpp  object.h
classloader/: CMakeLists.txt  class_file_io.h  class_file_reader.cpp  class_writer.cpp  classloader.cpp  classloader.h  classloader_impl.cpp  classloader_impl.h  instanceof_table.cpp  instanceof_table.h  loaded_iterators.cpp  loaded_iterators.h  loader_iterators.cpp  loader_iterators.h  raw_string.h
core/: CMakeLists.txt  arithmetic.h  executor.cpp  executor.h
gc/: CMakeLists.txt  class_iterators.h  iterable.h  iterators.cpp  semispace_allocator.cpp  semispace_allocator.h  stack_iterators.cpp  stack_iterators.h  stop_and_copy.cpp  stop_and_copy.h
globals/: CMakeLists.txt  types.h
instructions/: CMakeLists.txt  README.md  instructions.cpp  instructions.h
interface/: CMakeLists.txt  class_manager.cpp  class_manager.h  instanceof.cpp  instanceof.h  interface_cache.cpp  interface_cache.h  interfaces.h
logues/: CMakeLists.txt  bump_allocator.cpp  classloader.cpp  executor.cpp  instanceof_table.cpp  oheap.cpp  ostack.cpp  semispace_allocator.cpp  virtual_machine.cpp
memory/: CMakeLists.txt  allocator.cpp  allocator.h  bump_allocator.cpp  bump_allocator.h  byteblock.h  gc_logues.cpp  heap.cpp  heap.h  memory.h  memory_manager.h  memutils.h  objects.cpp  objects.h  oheap.cpp  oheap.h  old_heap.cpp  old_heap.h  ostack.cpp  ostack.h  stack.h  young_heap.cpp  young_heap.h
methods/: CMakeLists.txt  method.cpp  method.h  method_header.h
native/: CMakeLists.txt  api.h  args.h  native_types.cpp  native_types.h
objects/: CMakeLists.txt  class.cpp  class.h  field.h  method.cpp  method.h  object.cpp  object.h  objects.h
platform/: CMakeLists.txt  (+6 more)
(+51 files in other folders)
